add gitignore rules for python examples only
- to allow only having examples for usage in sightin api of the examples functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# SightIn .gitignore for examples only fork
+
+# Keep only python/examples - ignore everything else at root level
+/*
+!/python/
+/python/*
+!/python/examples/
+
 # Custom files
 LocalConfig.cmake
 src/colmap/util/version.cc
